--- a/src/Map.css
+++ b/src/Map.css
@@ -1,6 +1,6 @@
 .map {
   height: 500px;
-  background-color: white;
+  background-color: rgb(21, 26, 21);
   padding: 1rem;
   border-radius: 20px;
   margin-top: 16px;
